--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.2",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "localforage": "^1.10.0",
     "lucide-react": "^0.407.0",
     "match-sorter": "^6.3.4",
